client/components/uses/Uses.module.css
.uses {
  display: flex;
  flex-flow: column wrap;
  margin: 0 auto;
  width: 80%;
  align-content: center;
  padding-bottom: 1%;
}

.h3 {
  list-style-type: none;
  font-style: italic;
}

.routerLink {
  position: relative;
  display: inline-block;
  cursor: pointer;
  text-decoration: none;
  color: #e0bf9f;
  padding-right: 10px;
}

.routerLink:hover .icon {
  opacity: 1;
  visibility: visible;
}

.icon {
  color: ghostwhite;
  margin-left: 8px;
  cursor: pointer;
  font-size: 1rem;
  opacity: 0;
  visibility: hidden;
  transition:
    opacity 1s ease,
    visibility 1s ease;
}

.iconVisible {
  color: #ace1af;
  opacity: 1;
  visibility: visible;
}

.icon:hover {
  opacity: 0.5;
}

.paragraph {
  margin-top: 0;
  font-style: italic;
}

.link {
  font-weight: bold;
}

.link:hover {
  color: #e0bf9f;
}

.callToActionText {
  color: ghostwhite;
  font-style: italic;
  font-size: 15px;
  line-height: 1;
}

.callToActionAnchor {
  color: #e0bf9f;
  text-decoration: none;
  font-weight: 600;
  font-size: 15px;
  line-height: 1;
  padding-bottom: 10px;
}

.callToActionAnchor:focus {
  outline: none;
}

